made welcome page mobile ready

--- a/src/Auth.css
+++ b/src/Auth.css
@@ -53,3 +53,14 @@
         font-size: 1rem;
     }
 }
+
+@media only screen and (max-width: 768px) {
+    .login h1 {
+        font-size: 5rem;
+        margin-bottom: 20px;
+    }
+
+    .input-box {
+        margin-top: 10px;
+    }
+}
